# inner-machinations

./: .taurignore  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js
database/: test.session.sql
migrations/2024-02-15-050449_users/: down.sql  up.sql
src/: app.css  hooks.server.ts
src-tauri/: Cargo.toml  mydb.sqlite3  schema.rs  tauri.conf.json
src-tauri/src/: advanced_automata_funcs.rs  db.rs  language_determination_funcs.rs  lib.rs  main.rs  models.rs  regex_models.rs  registration_funcs.rs  regular_expression_funcs.rs  saving_automata_funcs.rs  schema.rs  testing_automata_funcs.rs  testing_funcs.rs  validation_automata_funcs.rs  validation_funcs.rs  verification_funcs.rs
src-tauri/src/miscellaneous/: common_models.rs  database_models_and_utilities.rs  environment.rs  miscellaneous_utilities.rs  mod.rs
src-tauri/src/regular_automata_funcs/: mod.rs  regular_automata_extra_features.rs  regular_automata_linguistics.rs  regular_automata_models.rs  regular_automata_saving.rs  regular_automata_validation.rs
src-tauri/src/regular_expression_funcs/: mod.rs  regex_models.rs  regular_expression_linguistics.rs  regular_expression_models.rs  regular_expression_parsing.rs  regular_expression_saving.rs  saving_regex_funcs.rs  tests.rs
src-tauri/src/tests/: mod.rs  regular_automata_tests.rs  regular_expression_tests.rs
src-tauri/src/user_flow_funcs/: mod.rs  registration.rs  user_models.rs  verification.rs
src/lib/: automataStores.ts  deletionFuncs.ts  drawingFuncs.ts  enums.ts  interfaces.ts  mathFuncs.ts  miscUtils.ts  types.ts  (+6 more)
(+59 files in other folders)
