[package]
name = "app"
version = "0.1.0"
description = "A desktop application to build and test deterministic and non-deterministic finite automata"
authors = ["Matthew Farah"]
license = "MIT"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = ["devtools"] }
diesel = { version = "2.2.0", features = ["sqlite", "chrono"] }
dotenv = "0.15.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
magic-crypt = "3.1.9"
lettre = "0.11.4"
rand = "0.8.5"
chrono = "0.4.38"
diesel-derive-enum = { version = "2.1.0", features = ["sqlite"] }
diesel_migrations = "2.2.0"
envy = "0.4.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
